syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/siddheshRajendraNimbalkar/bookstore/order/pb";


message Order {
    string order_id = 1;
    string product_id = 2;
    int32 quantity = 3;
    string status = 4;
    google.protobuf.Timestamp order_date = 5;
    google.protobuf.Timestamp created_at = 6;
}


